--- a/InterviewTasks.csproj
+++ b/InterviewTasks.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Task18_01_2020\" />
+    <Folder Include="Task27_12_2019\" />
+  </ItemGroup>
 
 </Project>
