--- a/InterviewTasks.csproj
+++ b/InterviewTasks.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,7 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Task18_01_2020\" />
     <Folder Include="Task27_12_2019\" />
   </ItemGroup>
 
